comments/src/app/index.css
body {
	margin: 0;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

div#root {
	display: flex;
	flex-direction: column;
	height: 100vh;
	align-items: center;
}

main {
	flex: 1;
	width: 100%;
	overflow: hidden;
	display: flex;
	flex-direction: column;
	margin: 0 auto;
	align-items: center;
}

.details-panel {
	padding: 10px;
	overflow: auto;
	display: flex;
	flex-direction: column;
}

.details-panel-placeholder {
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 1em;
	color: #bdbdbd;
}

.details-panel .main label,
.details-panel .main .label {
	font-weight: bold;
}

.top-row {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	margin: 10px;
	box-sizing: border-box;
}

.top-row.justify-right {
	justify-content: flex-end;
}

.title {
	align-self: center;
	font-weight: bold;
	color: #0099cc;
	margin: 0;
}

.control-group {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}

.button-group {
	flex-wrap: wrap;
	margin: 5px 5px;
}

.table-container {
	flex: 1; /* remaining height */
	width: 100%;
	display: flex;
	flex-direction: column;
}

.table-container.centered-rows .AppTable__dataRow,
.table-container.centered-rows .AppTable__headerRow {
	align-items: center;
}

.form-label {
	font-weight: bold;
}

.was-validated {
	& .form-control {
		&:valid {
			border-color: var(--bs-border-color);
			background-image: none;
			padding-right: unset;
		}
		&:valid:focus {
			box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
		}
	}

	& .form-check-input {
		&:valid {
			border-color: var(--bs-border-color);
		}

		&:valid:checked {
			background-color: #0d6efd;
			border-color: #0d6efd;
		}

		&:valid:focus {
			box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
		}

		&:valid ~ .form-check-label {
			color: unset;
		}
	}
}

.has-changes,
.form-control.has-changes:focus {
	background-color: rgb(255, 255, 126);
}

